--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/rrule": "^6.1.17",
     "@fullcalendar/vue3": "^6.1.17",
     "axios": "^1.9.0",
+    "date-fns-tz": "^3.2.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
